[project]
name = "running-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopy>=2.4.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly[express]>=6.5.0",
    "pymongo>=4.15.5",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
